--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,5 +1,9 @@
+@import "bootstrap.less";
+
 @import "variables.less";
 @import "mixins.less";
+@import "fa/font-awesome.less";
+@import "animate/animate-css.less";
 
 // Global Components
 html,
@@ -159,7 +163,7 @@ header {
     min-height: auto;
     .background-cover;
     background-position: center;
-    background-image: url('../img/header.jpg');
+    background-image: url('/images/splash_4.jpg');
     text-align: center;
     color: white;
     .header-content {
