--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -183,8 +183,8 @@ header {
             }
             p {
                 font-weight: 300;
-                color: fade(white, 70%);
-                font-size: 16px;
+                color: white;
+                font-size: 22px;
                 margin-bottom: 50px;
             }
         }
