--- a/app/styles/mixins.less
+++ b/app/styles/mixins.less
@@ -50,7 +50,7 @@
 // Font Selections
 
 .serif-font() {
-	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .script-font() {
